--- a/src/app/pages/raporlar/karsilastirma/karsilastirma.component.html
+++ b/src/app/pages/raporlar/karsilastirma/karsilastirma.component.html
@@ -19,7 +19,7 @@
                     <p-button label="Yazdır" icon="pi pi-print" severity="info" (onClick)="yazdir()">
                     </p-button>
                     <p-button label="Geri" icon="pi pi-arrow-left" severity="secondary" [outlined]="true"
-                        [routerLink]="['/vardiya']">
+                        [routerLink]="['/raporlar/vardiya']">
                     </p-button>
                 </div>
             </div>
