backende taşnma başladı frontta yapılan çoğu iş arka plana alınıyor-1

--- a/src/app/pages/operasyon/pompa-yonetimi/pompa-yonetimi.component.html
+++ b/src/app/pages/operasyon/pompa-yonetimi/pompa-yonetimi.component.html
@@ -937,7 +937,8 @@
                         </span>
                         <div class="text-right">
                             <div class="font-bold">{{ detay.tutar | number:'1.2-2' }} ₺</div>
-                            <div class="text-xs text-surface-500">{{ detay.litre | number:'1.2-2' }} L</div>
+                            <div class="text-xs text-surface-500">{{ detay.litre | number:'1.2-2' }} L • {{
+                                detay.islemSayisi }} İşlem</div>
                         </div>
                     </div>
                 </div>
